change guide icon stye; change scrollbar style; fix some bugs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1030,6 +1030,13 @@ button.close:focus {
 
 .thumbnail-guide > img {
     max-width: 105px;
+    opacity: 0.75;
+    transition: 150ms;
+}
+
+.thumbnail-guide > img:hover {
+    max-width: 105px;
+    opacity: 1;
 }
 
 /*.thumbnail-guide > a > img {
